name:                pornview
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable pv
  hs-source-dirs:      .
  ghc-options:         -Wall
  main-is:             Main.hs
  other-modules:       Database
  build-depends:       base >= 4.7 && < 5
                     , ghc-prim == 0.5.0.0
                     , aeson
                     , cassava
                     , text
                     , warp
                     , wai
                     , http-types
                     , bytestring
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
